# Voxel-Odyssey

VoxelOdyssey/: CMakeLists.txt  TODO.md  vcpkg.json
VoxelOdyssey/assets/shaders/: debug_fragment.glsl  fragment.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex.glsl
VoxelOdyssey/src/: main.cpp
VoxelOdyssey/src/core/: Camera.cpp  Camera.h  Frustum.cpp  Frustum.h  Input.cpp  Input.h  Settings.cpp  Settings.h  Window.cpp  Window.h
VoxelOdyssey/src/renderer/: DebugRenderer.cpp  DebugRenderer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SimpleHUD.cpp  SimpleHUD.h  Skybox.cpp  Skybox.h
VoxelOdyssey/src/ui/: HUD.cpp  HUD.h  InventoryUI.cpp  InventoryUI.h  MainMenu.cpp  MainMenu.h  PauseMenu.cpp  PauseMenu.h
VoxelOdyssey/src/world/: Block.h  Chunk.h  Inventory.cpp  Inventory.h  PlayerStats.cpp  PlayerStats.h  Raycast.cpp  Raycast.h  World.cpp  World.h  WorldManager.cpp  WorldManager.h  chunk.cpp
